--- a/.github/workflows/python-flake8.yml
+++ b/.github/workflows/python-flake8.yml
@@ -28,5 +28,5 @@ jobs:
       run: |
         pipenv install -d
         # stop the build if there are Python syntax errors or undefined names
-        run flake8
+        pipenv run flake8
 
